--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\Hp\eclipse-workspace\Batch15_Framwork\MasterSuite.xml</span>
+                    <span>C:\Users\Hp\eclipse-workspace\Batch15_Framwork\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Com.Test.Test_1" class="method navigator-link" hash-for-method="verifylogin_page">verifylogin_page</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Com.Test.Test_1" class="method navigator-link" hash-for-method="verify_loginpage">verify_loginpage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Suite -->
@@ -127,12 +127,12 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifylogin_page">
-                  </a> <!-- verifylogin_page -->
-                  <span class="method-name">verifylogin_page</span>
-                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xssf.usermodel.XSSFWorkbook.getSheet(String)&quot; because &quot;this.wb&quot; is null
-	at Com.Utility.ExcelDataProvider.getStringdata_Excel(ExcelDataProvider.java:19)
-	at Com.Test.Test_1.verifylogin_page(Test_1.java:19)
+                  <a name="verify_loginpage">
+                  </a> <!-- verify_loginpage -->
+                  <span class="method-name">verify_loginpage</span>
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;com.aventstack.extentreports.ExtentTest.log(com.aventstack.extentreports.Status, String)&quot; because &quot;Com.Utility.Library.test&quot; is null
+	at Com.Utility.Library.custem_sendKeys(Library.java:46)
+	at Com.Test.Test_1.verify_loginpage(Test_1.java:21)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 27 stack frames
 </div> <!-- stack-trace -->
@@ -143,7 +143,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hp\eclipse-workspace\Batch15_Framwork\MasterSuite.xml</span>
+            <span class="header-content">C:\Users\Hp\eclipse-workspace\Batch15_Framwork\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -151,11 +151,11 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;parameter name=&quot;BrowserName&quot; value=&quot;Chrome&quot;/&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;TestChrome&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Com.Test.Test_1&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- TestChrome --&gt;
+  &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -167,7 +167,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">TestChrome (1 class)</span>
+                <span class="test-name">Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -195,14 +195,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifylogin_page')
+data.setCell(0, 1, 'verify_loginpage')
 data.setCell(0, 2, 'Com.Test.Test_1')
-data.setCell(0, 3, 107);
+data.setCell(0, 3, 187);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 107 ms</span>
+              <span class="suite-total-time">Total running time: 187 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -235,17 +235,17 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">72 ms</span>
+                <span class="method-start">1683 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">verifylogin_page</span>
-                <span class="method-start">10100 ms</span>
+                <span class="method-name">verify_loginpage</span>
+                <span class="method-start">9303 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10242 ms</span>
+                <span class="method-start">9495 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
