--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="caa560">  <td>23/05/07 10:43:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:Com.Test.Test_1@1151e434]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@402009651</td>   <td></td> </tr>
-<tr bgcolor="caa560">  <td>23/05/07 10:43:19</td>   <td>10170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:Com.Test.Test_1@1151e434]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@402009651</td>   <td></td> </tr>
-<tr bgcolor="caa560">  <td>23/05/07 10:43:09</td>   <td>-65</td> <td title="&gt;&gt;BaseClass.initilization()[pri:0, instance:Com.Test.Test_1@1151e434]">&gt;&gt;initilization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@402009651</td>   <td></td> </tr>
-<tr bgcolor="8872e1">  <td>23/05/07 10:43:19</td>   <td>10027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_1.verifylogin_page()[pri:0, instance:Com.Test.Test_1@1151e434]">verifylogin_page</td> 
-  <td>main@402009651</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/05/08 18:20:57</td>   <td>0</td> <td title="&gt;&gt;BaseClass.initilization()[pri:0, instance:Com.Test.Test_1@2d710f1a]">&gt;&gt;initilization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/05/08 18:20:59</td>   <td>1674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:Com.Test.Test_1@2d710f1a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/05/08 18:21:06</td>   <td>9485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:Com.Test.Test_1@2d710f1a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
+<tr bgcolor="70f8a6">  <td>23/05/08 18:21:06</td>   <td>9292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_1.verify_loginpage()[pri:0, instance:Com.Test.Test_1@2d710f1a]">verify_loginpage</td> 
+  <td>main@1446983876</td>   <td></td> </tr>
 </table>
